--- a/public/main.css
+++ b/public/main.css
@@ -43,6 +43,18 @@ body {
     margin-left: 2rem;
 }
 
+.btnDKDN a
+{
+    text-decoration: none;
+    color: white;
+    
+}
+
+.btnDKDN button
+{
+    font-weight: bold;
+}
+
 .menuGH
 {
     
